--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -101,3 +101,10 @@ button:hover {
 .locations:hover .popover {
     visibility: visible;
 }
+
+.amenities h4{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    height: 16px;
+}
